--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "**A cloner unitary:** U = CNOT\n",
     "\n",
-    "**A state to be cloned:** $\\ket\\psi = \\alpha\\ket 0 + \\beta\\ket1$\n",
+    "**A state to be cloned:** $$\\ket\\psi = \\alpha\\ket 0 + \\beta\\ket1$$\n",
     "\n",
     "In quantum mechanics, if we want to find out how a certain operator acts on an arbitrary quantum state, we investigate its action on the basis states and then extend it by linearity on superpositions."
    ]
