--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -47,6 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}$$\n",
+    "$$\\newcommand{\\bra}[1]{\\left\\langle{#1}\\right|}$$\n",
     "In 1982 Wooters and Zurek in a work <a href=\"https://www.nature.com/articles/299802a0\">\"A single quantum cannot be cloned\"</a> derived a theorem, which emerged as a generalization of observations and assumptions about properties of quantum mechanical systems known until that moment - the **no-cloning theorem**. The statement of this theorem is as follows:\n",
     "\n",
     "> *An unknown quantum state cannot be cloned*\n",
