--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -10,10 +10,7 @@
     "\n",
     "### ***Abstract:***\n",
     "\n",
-    "
-    $$
-    \\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}
-    $$",
+    "$\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}$",
     "$\\newcommand{\\bra}[1]{\\left\\langle{#1}\\right|}$\n",
     "$\\newcommand{\\braket}[2]{\\left\\langle{#1}\\middle|{#2}\\right\\rangle}$\n",
     "\n",
