--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -47,8 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}$$\n",
-    "$$\\newcommand{\\bra}[1]{\\left\\langle{#1}\\right|}$$\n",
+    
     "In 1982 Wooters and Zurek in a work <a href=\"https://www.nature.com/articles/299802a0\">\"A single quantum cannot be cloned\"</a> derived a theorem, which emerged as a generalization of observations and assumptions about properties of quantum mechanical systems known until that moment - the **no-cloning theorem**. The statement of this theorem is as follows:\n",
     "\n",
     "> *An unknown quantum state cannot be cloned*\n",
@@ -71,7 +70,7 @@
     "\n",
     "**A cloner unitary:** U = CNOT\n",
     "\n",
-    "**A state to be cloned:** $\\ket{\\psi} = \\alpha\\ket{0} + \\beta\\ket{1}$\n",
+    "**A state to be cloned:** $|\\psi\rangle = \\alpha\\ket{0} + \\beta\\ket{1}$\n",
     "\n",
     "In quantum mechanics, if we want to find out how a certain operator acts on an arbitrary quantum state, we investigate its action on the basis states and then extend it by linearity on superpositions."
    ]
