--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "**A cloner unitary:** U = CNOT\n",
     "\n",
-    "**A state to be cloned:** $\\left|\\psi\\rangle = \\alpha|0\\rangle + \\beta|1\\rangle$\n",
+    "**A state to be cloned:** $\\left|\\psi\\right\\rangle = \\alpha|0\\rangle + \\beta|1\\rangle$\n",
     "\n",
     "In quantum mechanics, if we want to find out how a certain operator acts on an arbitrary quantum state, we investigate its action on the basis states and then extend it by linearity on superpositions."
    ]
