--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -10,9 +10,11 @@
     "\n",
     "### ***Abstract:***\n",
     "\n",
-    "$\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}$\n",
-    "$\\newcommand{\\bra}[1]{\\left\\langle{#1}\\right|}$\n",
-    "$\\newcommand{\\braket}[2]{\\left\\langle{#1}\\middle|{#2}\\right\\rangle}$\n",
+    "$\n",
+    "\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}\n",
+    "\\newcommand{\\bra}[1]{\\left\\langle{#1}\\right|}\n",
+    "\\newcommand{\\braket}[2]{\\left\\langle{#1}\\middle|{#2}\\right\\rangle}\n",
+    "$\n",
     "\n",
     "In this tutorial, we will look at a very important theorem of quantum mechanics called **the no-cloning theorem** and see how it is still possible to do a specific kind of imperfect cloning using **optimal cloning machines**. We will see several examples of such cloning machines, in particular, **a universal quantum cloning machine** and **a phase-covariant quantum cloning machine** for qubit quantum states. We will also discuss why the optimal cloning can be interesting for applications of quantum mechanics."
    ]
@@ -47,7 +49,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    
     "In 1982 Wooters and Zurek in a work <a href=\"https://www.nature.com/articles/299802a0\">\"A single quantum cannot be cloned\"</a> derived a theorem, which emerged as a generalization of observations and assumptions about properties of quantum mechanical systems known until that moment - the **no-cloning theorem**. The statement of this theorem is as follows:\n",
     "\n",
     "> *An unknown quantum state cannot be cloned*\n",
@@ -70,7 +71,7 @@
     "\n",
     "**A cloner unitary:** U = CNOT\n",
     "\n",
-    "**A state to be cloned:** $\\left|\\psi\\right\\rangle = \\alpha|0\\rangle + \\beta|1\\rangle$\n",
+    "**A state to be cloned:** $\\left|\\psi\\right\\rangle = \\alpha\\left|0\\right\\rangle + \\beta\\left|1\\right\\rangle$\n",
     "\n",
     "In quantum mechanics, if we want to find out how a certain operator acts on an arbitrary quantum state, we investigate its action on the basis states and then extend it by linearity on superpositions."
    ]
@@ -91,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's take the first qubit basis state |0> as an input to our cloning unitary:"
+    "First, let's take the first qubit basis state $\\left|0\\right\\rangle$ as an input to our cloning unitary:"
    ]
   },
   {
@@ -125,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Running the circuit on the qasm simulator, we obtain counts of measurements of the final state in the computational basis (|0>, |1>). Let's look at the outcomes histogram:"
+    "Running the circuit on the qasm simulator, we obtain counts of measurements of the final state in the computational basis ($\\left|0\\right\\rangle$, $\\left|1\\right\\rangle$). Let's look at the outcomes histogram:"
    ]
   },
   {
@@ -158,9 +159,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the resulting state is a factorizable state $\\ket 0\\otimes\\ket 0$. We expected that!\n",
+    "As we can see, the resulting state is a factorizable state $\\left|0\\right\\rangle \\otimes \\left|0\\right\\rangle$. We expected that!\n",
     "\n",
-    "We proceed with the second qubit basis state $\\ket 1$ as an input to our cloning unitary:"
+    "We proceed with the second qubit basis state $\\left|1\\right\\rangle$ as an input to our cloning unitary:"
    ]
   },
   {
@@ -221,9 +222,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have another factorizable state $\\ket 1\\otimes\\ket 1$. Everything is ok so far!\n",
+    "Now we have another factorizable state $\\left|1\\right\\rangle\\otimes\\left|1\\right\\rangle$. Everything is ok so far!\n",
     "\n",
-    "The difference between classical and quantum bits starts when it comes to superposition - an innate property of qubits as quantum systems, which classical bits lack. Let's take a superposition of the basis $\\frac{1}{\\sqrt2}\\ket 0 + \\frac{1}{\\sqrt2}\\ket 1$ states and try to make a clone of it:"
+    "The difference between classical and quantum bits starts when it comes to superposition - an innate property of qubits as quantum systems, which classical bits lack. Let's take a superposition of the basis $\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle$ states and try to make a clone of it:"
    ]
   },
   {
@@ -286,25 +287,25 @@
    "source": [
     "Have we succeeded? Let's take a closer look: if we managed to produce a clone of the superposition state, the final state would be the following:\n",
     "\n",
-    "$\\big{(}\\frac{1}{\\sqrt2}\\ket 0 + \\frac{1}{\\sqrt2}\\ket 1\\big{)}\\otimes\\big{(}\\frac{1}{\\sqrt2}\\ket 0 + \\frac{1}{\\sqrt2}\\ket 1\\big{)} = \\frac{1}{2}\\ket 0\\ket 0 + \\frac{1}{2}\\ket 0\\ket 1 + \\frac{1}{2}\\ket 1\\ket 0 + \\frac{1}{2}\\ket 1\\ket 1 = \\ket{\\Psi_{final}}$\n",
+    "$\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}\\otimes\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)} = \\frac{1}{2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|0\\right\\rangle\\left|1\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|1\\right\\rangle = \\left|\\Psi_{final}\\right\\rangle$\n",
     "\n",
     "Recalling *the Born rule* for quantum measurements, we expect to see the outcome:\n",
     "\n",
-    "$Pr(00) = \\braket{00}{\\Psi_{final}} = \\frac{1}{4}$\n",
+    "$Pr(00) = \\left\\langle{{00}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(01) = \\braket{01}{\\Psi_{final}} = \\frac{1}{4}$\n",
+    "$Pr(01) = \\left\\langle{{01}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(10) = \\braket{10}{\\Psi_{final}} = \\frac{1}{4}$\n",
+    "$Pr(10) = \\left\\langle{{10}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(11) = \\braket{11}{\\Psi_{final}} = \\frac{1}{4}$\n",
+    "$Pr(11) = \\left\\langle{{11}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
     "Looking back at the resulting histogram, we see slightly different results: there are no \"01\" and \"10\" pairs at all! If we go through the whole procedure of the last experiment step-by-step, we can easily see where the cloning has failed:\n",
     "\n",
-    "$\\ket{0}\\ket{0} \\longrightarrow [\\text{apply hadamard to qubit 1}] \\longrightarrow \\frac{1}{\\sqrt 2}\\big{(}\\ket{0} + \\ket{1}\\big{)}\\otimes\\ket{0} \\longrightarrow [\\text{apply $CNOT_{12}$}] \\longrightarrow \\frac{1}{\\sqrt 2}\\ket{0}\\ket{0} + \\frac{1}{\\sqrt 2}\\ket{1}\\ket{1}$\n",
+    "$\\left|0\\right\\rangle\\left|0\\right\\rangle \\longrightarrow [\\text{apply hadamard to qubit 1}] \\longrightarrow \\frac{1}{\\sqrt 2}\\big{(}\\left|0\\right\\rangle + \\left|1\\right\\rangle\\big{)}\\otimes\\left|0\\right\\rangle \\longrightarrow [\\text{apply $CNOT_{12}$}] \\longrightarrow \\frac{1}{\\sqrt 2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt 2}\\left|1\\right\\rangle\\left|1\\right\\rangle$\n",
     "\n",
     "We see, that the final state is a maximally entangled state, which is quite the opposite to a tensor product of quantum states:\n",
     "\n",
-    "$\\frac{1}{\\sqrt 2}\\ket{0}\\ket{0} + \\frac{1}{\\sqrt 2}\\ket{1}\\ket{1} \\neq \\big{(}\\frac{1}{\\sqrt2}\\ket{0} + \\frac{1}{\\sqrt2}\\ket{1}\\big{)}\\otimes\\big{(}\\frac{1}{\\sqrt2}\\ket{0} + \\frac{1}{\\sqrt2}\\ket{1}\\big{)}$\n",
+    "$\\frac{1}{\\sqrt 2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt 2}\\left|1\\right\\rangle\\left|1\\right\\rangle \\neq \\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}\\otimes\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}$\n",
     "\n",
     "So, we see that using the classical approach to cloning doesn't work when it comes to quantum superpositions of states. But probably there is some complicated unitary transformation which does the cloning. Can we find it if we work harder? The no-cloning theorem prohibits this possibility. To see this, let's look at the proof of this theorem:"
    ]
