--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -10,12 +10,6 @@
     "\n",
     "### ***Abstract:***\n",
     "\n",
-    "$\n",
-    "\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}\n",
-    "\\newcommand{\\bra}[1]{\\left\\langle{#1}\\right|}\n",
-    "\\newcommand{\\braket}[2]{\\left\\langle{#1}\\middle|{#2}\\right\\rangle}\n",
-    "$\n",
-    "\n",
     "In this tutorial, we will look at a very important theorem of quantum mechanics called **the no-cloning theorem** and see how it is still possible to do a specific kind of imperfect cloning using **optimal cloning machines**. We will see several examples of such cloning machines, in particular, **a universal quantum cloning machine** and **a phase-covariant quantum cloning machine** for qubit quantum states. We will also discuss why the optimal cloning can be interesting for applications of quantum mechanics."
    ]
   },
@@ -291,7 +285,7 @@
     "\n",
     "Recalling *the Born rule* for quantum measurements, we expect to see the outcome:\n",
     "\n",
-    "$Pr(00) = \\left\\langle{{00}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(00) = \\left\\langle 00\\big |\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
     "$Pr(01) = \\left\\langle{{01}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
