--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "Recalling *the Born rule* for quantum measurements, we expect to see the outcome:\n",
     "\n",
-    "$Pr(00)=\\frac{1}{4}$\n",
+    "$Pr(00)=\\left\\langle{00}$\n",
     "\n",
     "$Pr(01) = \\left\\langle{{01}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
