--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "where $\\oplus$ is a sum modulo 2. It acts like copying classical bits: \n",
     "\n",
-    "$(0, 0) \\longrightarrow (0, 0 \\oplus 0) = \big(0, 0)$ \n",
+    "$(0, 0) \\longrightarrow (0, 0 \\oplus 0) = \\big(0, 0)$ \n",
     "\n",
     "$(1, 0) \\longrightarrow (1, 0 \\oplus 1) = (1, 1)$\n",
     "\n",
