--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "where $\\oplus$ is a sum modulo 2. It acts like copying classical bits: \n",
     "\n",
-    "$(0, 0) \\longrightarrow (0, 0 \\oplus 0) = \\big{(}0, 0)$ \n",
+    "$(0, 0) \\longrightarrow (0, 0 \\oplus 0) = (0, 0)$ \n",
     "\n",
     "$(1, 0) \\longrightarrow (1, 0 \\oplus 1) = (1, 1)$\n",
     "\n",
@@ -285,7 +285,7 @@
     "\n",
     "Recalling *the Born rule* for quantum measurements, we expect to see the outcome:\n",
     "\n",
-    "$Pr(00)=\\left\\langle{00}$\n",
+    "$Pr(00)=\\left\\langle 00|\\Psi_{final}\\right\\rangle=\\frac{1}{4}$\n",
     "\n",
     "$Pr(01) = \\left\\langle{{01}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
