--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -281,17 +281,17 @@
    "source": [
     "Have we succeeded? Let's take a closer look: if we managed to produce a clone of the superposition state, the final state would be the following:\n",
     "\n",
-    "$\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}\\otimes\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)} = \\frac{1}{2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|0\\right\\rangle\\left|1\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|1\\right\\rangle = \\left|\\Psi_{final}\\right\\rangle$\n",
+    "$(\\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle)\\otimes(\\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle) = \\frac{1}{2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|0\\right\\rangle\\left|1\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|1\\right\\rangle = \\left|\\Psi_{final}\\right\\rangle$\n",
     "\n",
     "Recalling *the Born rule* for quantum measurements, we expect to see the outcome:\n",
     "\n",
-    "$Pr(00)=\\left\\langle 00|\\Psi_{final}\\right\\rangle=\\frac{1}{4}$\n",
+    "$Pr(00) = \\left\\langle 00|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(01) = \\left\\langle{{01}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(01) = \\left\\langle 01|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(10) = \\left\\langle{{10}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(10) = \\left\\langle 10|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(11) = \\left\\langle{{11}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(11) = \\left\\langle 11|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
     "Looking back at the resulting histogram, we see slightly different results: there are no \"01\" and \"10\" pairs at all! If we go through the whole procedure of the last experiment step-by-step, we can easily see where the cloning has failed:\n",
     "\n",
