--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -295,7 +295,7 @@
     "\n",
     "Looking back at the resulting histogram, we see slightly different results: there are no \"01\" and \"10\" pairs at all! If we go through the whole procedure of the last experiment step-by-step, we can easily see where the cloning has failed:\n",
     "\n",
-    "$\\left|0\\right\\rangle\\left|0\\right\\rangle \\longrightarrow [\\text{apply hadamard to qubit 1}] \\longrightarrow \\frac{1}{\\sqrt 2}\\big{(}\\left|0\\right\\rangle + \\left|1\\right\\rangle\\big{)}\\otimes\\left|0\\right\\rangle \\longrightarrow [\\text{apply $CNOT_{12}$}] \\longrightarrow \\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle\\left|1\\right\\rangle$\n",
+    "$\\left|0\\right\\rangle\\left|0\\right\\rangle \\longrightarrow [\\text{apply hadamard to qubit 1}] \\longrightarrow \\frac{1}{\\sqrt{2}}(\\left|0\\right\\rangle + \\left|1\\right\\rangle\\big{)}\\otimes\\left|0\\right\\rangle \\longrightarrow [\\text{apply $CNOT_{12}$}] \\longrightarrow \\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle\\left|1\\right\\rangle$\n",
     "\n",
     "We see, that the final state is a maximally entangled state, which is quite the opposite to a tensor product of quantum states:\n",
     "\n",
