--- a/0. Teach_me_qiskit.ipynb
+++ b/0. Teach_me_qiskit.ipynb
@@ -10,6 +10,12 @@
     "\n",
     "### ***Abstract:***\n",
     "\n",
+    "$\n",
+    "\\newcommand{\\ket}[1]{\\left|{#1}\\right\\rangle}\n",
+    "\\newcommand{\\bra}[1]{\\left\\langle{#1}\\right|}\n",
+    "\\newcommand{\\braket}[2]{\\left\\langle{#1}\\middle|{#2}\\right\\rangle}\n",
+    "$\n",
+    "\n",
     "In this tutorial, we will look at a very important theorem of quantum mechanics called **the no-cloning theorem** and see how it is still possible to do a specific kind of imperfect cloning using **optimal cloning machines**. We will see several examples of such cloning machines, in particular, **a universal quantum cloning machine** and **a phase-covariant quantum cloning machine** for qubit quantum states. We will also discuss why the optimal cloning can be interesting for applications of quantum mechanics."
    ]
   },
@@ -281,25 +287,25 @@
    "source": [
     "Have we succeeded? Let's take a closer look: if we managed to produce a clone of the superposition state, the final state would be the following:\n",
     "\n",
-    "$(\\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle)\\otimes(\\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle) = \\frac{1}{2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|0\\right\\rangle\\left|1\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|1\\right\\rangle = \\left|\\Psi_{final}\\right\\rangle$\n",
+    "$\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}\\otimes\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)} = \\frac{1}{2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|0\\right\\rangle\\left|1\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{2}\\left|1\\right\\rangle\\left|1\\right\\rangle = \\left|\\Psi_{final}\\right\\rangle$\n",
     "\n",
     "Recalling *the Born rule* for quantum measurements, we expect to see the outcome:\n",
     "\n",
-    "$Pr(00) = \\left\\langle 00|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(00) = \\left\\langle{{00}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(01) = \\left\\langle 01|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(01) = \\left\\langle{{01}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(10) = \\left\\langle 10|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(10) = \\left\\langle{{10}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "$Pr(11) = \\left\\langle 11|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
+    "$Pr(11) = \\left\\langle{{11}\\big{|}\\Psi_{final}}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
     "Looking back at the resulting histogram, we see slightly different results: there are no \"01\" and \"10\" pairs at all! If we go through the whole procedure of the last experiment step-by-step, we can easily see where the cloning has failed:\n",
     "\n",
-    "$\\left|0\\right\\rangle\\left|0\\right\\rangle \\longrightarrow [\\text{apply hadamard to qubit 1}] \\longrightarrow \\frac{1}{\\sqrt{2}}(\\left|0\\right\\rangle + \\left|1\\right\\rangle)\\otimes\\left|0\\right\\rangle \\longrightarrow [\\text{apply CNOT(12) }] \\longrightarrow \\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle\\left|1\\right\\rangle$\n",
+    "$\\left|0\\right\\rangle\\left|0\\right\\rangle \\longrightarrow [\\text{apply hadamard to qubit 1}] \\longrightarrow \\frac{1}{\\sqrt 2}\\big{(}\\left|0\\right\\rangle + \\left|1\\right\\rangle\\big{)}\\otimes\\left|0\\right\\rangle \\longrightarrow [\\text{apply $CNOT_{12}$}] \\longrightarrow \\frac{1}{\\sqrt 2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt 2}\\left|1\\right\\rangle\\left|1\\right\\rangle$\n",
     "\n",
     "We see, that the final state is a maximally entangled state, which is quite the opposite to a tensor product of quantum states:\n",
     "\n",
-    "$\\frac{1}{\\sqrt 2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt 2}\\left|1\\right\\rangle\\left|1\\right\\rangle \\neq \\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}\\otimes\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}$\n",
+    "$\\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle\\left|1\\right\\rangle \\neq (\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle)\\otimes(\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle)$\n",
     "\n",
     "So, we see that using the classical approach to cloning doesn't work when it comes to quantum superpositions of states. But probably there is some complicated unitary transformation which does the cloning. Can we find it if we work harder? The no-cloning theorem prohibits this possibility. To see this, let's look at the proof of this theorem:"
    ]
