--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -299,7 +299,7 @@
     "\n",
     "We see, that the final state is a maximally entangled state, which is quite the opposite to a tensor product of quantum states:\n",
     "\n",
-    "$\\frac{1}{\\sqrt 2}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt 2}\\left|1\\right\\rangle\\left|1\\right\\rangle \\neq \\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}\\otimes\\big{(}\\frac{1}{\\sqrt2}\\left|0\\right\\rangle + \\frac{1}{\\sqrt2}\\left|1\\right\\rangle\\big{)}$\n",
+    "$\\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle\\left|1\\right\\rangle \\neq (\\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle)\\otimes(\\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle)$\n",
     "\n",
     "So, we see that using the classical approach to cloning doesn't work when it comes to quantum superpositions of states. But probably there is some complicated unitary transformation which does the cloning. Can we find it if we work harder? The no-cloning theorem prohibits this possibility. To see this, let's look at the proof of this theorem:"
    ]
