--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -310,29 +310,29 @@
    "source": [
     "**Proof:**\n",
     "\n",
-    "Let $\\ket{\\Psi}$ and $\\ket{\\Phi}$ be two arbitrary quantum states with a scalar product: $\\braket{\\Psi}{\\Phi}$. Let's suppose, that there is a unitary U such that it's outcome is a pair of target state clones:\n",
+    "Let $\\left|\\Psi\\right\\rangle$ and $\\left|\\Phi\\right\\rangle$ be two arbitrary quantum states with a scalar product: $\\left\\langle\\Psi|\\Phi\\right\\rangle$. Let's suppose, that there is a unitary U such that it's outcome is a pair of target state clones:\n",
     "\n",
-    "$U(\\ket{\\Psi}\\ket{0}) = \\ket{\\Psi}\\ket{\\Psi}$\n",
+    "$U(\\left|\\Psi\\right\\rangle\\left|{0}\\right\\rangle) = \\left|\\Psi\\right\\rangle\\left|\\Psi\\right\\rangle$\n",
     "\n",
-    "$U(\\ket{\\Phi}\\ket{0}) = \\ket{\\Phi}\\ket{\\Phi}$\n",
+    "$U(\\left|\\Phi\\right\\rangle\\left|0\\right\\rangle) = \\left|\\Phi\\right\\rangle\\left|\\Phi\\right\\rangle$\n",
     "\n",
-    "where $\\ket{0}$ is an arbitrary ancillary state. A unitary transformation is a rotation of a vector in a Hilbert space, so it preserves a scalar product. We can take a scalar product of the left and right hand sides of the expressions above. The result is the following:\n",
+    "where $\\left|0\\right\\rangle$ is an arbitrary ancillary state. A unitary transformation is a rotation of a vector in a Hilbert space, so it preserves a scalar product. We can take a scalar product of the left and right hand sides of the expressions above. The result is the following:\n",
     "\n",
-    "$(\\bra{\\Psi}\\bra{0}) U^{\\dagger}U (\\ket{\\Phi}\\ket{0}) = (\\bra{\\Psi}\\bra{\\Psi}) (\\ket{\\Phi}\\ket{\\Phi})$\n",
+    "$(\\left\\langle\\Psi\\right|\\left\\langle{0}\\right|) U^{\\dagger}U (\\left|\\Phi\\right\\rangle\\left|0\\right\\rangle) = (\\left\\langle\\Psi\\right|\\left\\langle\\Psi\\right|) (\\left|\\Phi\\right\\rangle\\left|\\Phi\\right\\rangle)$\n",
     "\n",
     "Using a property of unitary operators $U^{\\dagger}U  = I$, we obtain:\n",
     "\n",
-    "$\\braket{\\Psi}{\\Phi} \\braket{0}{0} = \\braket{\\Psi}{\\Phi}\\braket{\\Psi}{\\Phi}$\n",
+    "$\\left\\langle\\Psi|\\Phi\\right\\rangle \\left\\langle{0|0}\\right\\rangle = \\left\\langle{\\Psi|\\Phi}\\right\\rangle \\left\\langle{\\Psi|\\Phi}\\right\\rangle$\n",
     "\n",
-    "Finally, using the fact that every quantum state is normalized ($\\braket{0}{0} = 1$), we have the following result:\n",
+    "Finally, using the fact that every quantum state is normalized ($\\left\\langle{0|0}\\right\\rangle = 1$), we have the following result:\n",
     "\n",
-    "$\\braket{\\Psi}{\\Phi} = \\braket{\\Psi}{\\Phi}\\braket{\\Psi}{\\Phi}$\n",
+    "$\\left\\langle{\\Psi|\\Phi}\\right\\rangle = \\left\\langle{\\Psi|\\Phi}\\right\\rangle\\left\\langle{\\Psi|\\Phi}\\right\\rangle$\n",
     "\n",
     "or, in a more convenient form:\n",
     "\n",
-    "$\\braket{\\Psi}{\\Phi}(1 - \\braket{\\Psi}{\\Phi}) = 0$\n",
+    "$\\left\\langle{\\Psi|\\Phi}\\right\\rangle(1 - \\left\\langle{\\Psi|\\Phi}\\right\\rangle) = 0$\n",
     "\n",
-    "What does that mean? We assumed that there exists a cloning unitary U. Then, using only basic principles of quantum mechanics, we discovered that, to be perfectly cloned, our \"arbitrary quantum states\" must satisfy a certain equation on their scalar product. Obviously, the equation is satisfied only when those states are identical states ($\\ket{\\Psi} = \\ket{\\Phi}$, so $\\braket{\\Phi}{\\Psi} = 1$) or orthogonal states ($\\ket{\\Psi} = \\ket{\\Phi_{\\perp}}$, so $\\braket{\\Phi}{\\Psi} = 0$)."
+    "What does that mean? We assumed that there exists a cloning unitary U. Then, using only basic principles of quantum mechanics, we discovered that, to be perfectly cloned, our \"arbitrary quantum states\" must satisfy a certain equation on their scalar product. Obviously, the equation is satisfied only when those states are identical states ($\\left|{\\Psi}\\right\\rangle = \\left|{\\Phi}\\right\\rangle$, so $\\left\\langle{\\Phi|\\Psi}\\right\\rangle = 1$) or orthogonal states ($\\left|{\\Psi}\\right\\rangle = \\left|{\\Phi_{\\perp}}\\right\\rangle$, so $\\left\\langle{\\Phi|\\Psi}\\right\\rangle = 0$)."
    ]
   },
   {
