--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -373,15 +373,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose that the target state is a qubit quantum state $\\ket{a}$. We take a random state $\\ket{+b}$ from the Bloch sphere and measure the target state $\\ket{a}$ projecting it on the state $\\ket{b}$. Because the dimension of the qubit Hilbert space is d=2, we obtain two possible outcomes $\\ket{b}$ or $\\ket{-b}$. Then we just prepare a couple of states corresponding to the outcome and say \"we have a couple of imperfect clones of the target state\".\n",
+    "Suppose that the target state is a qubit quantum state $\\left|{a}\\right\\rangle$. We take a random state $\\left|{+b}\\right\\rangle$ from the Bloch sphere and measure the target state $\\left|{a}\\right\\rangle$ projecting it on the state $\\left|{b}\\right\\rangle$. Because the dimension of the qubit Hilbert space is d=2, we obtain two possible outcomes $\\left|{b}\\right\\rangle$ or $\\left|{-b}\\right\\rangle$. Then we just prepare a couple of states corresponding to the outcome and say \"we have a couple of imperfect clones of the target state\".\n",
     "\n",
     "Lets look at the efficiency of such an approach. Qubit quantum states have the following form:\n",
     "\n",
-    "$\\ket{a} = \\frac{1}{2}(I + \\vec{a}\\vec{\\sigma})$\n",
+    "$\\left|{a}\\right\\rangle = \\frac{1}{2}(I + \\vec{a}\\vec{\\sigma})$\n",
     "\n",
-    "$\\ket{b} = \\frac{1}{2}(I + \\vec{b}\\vec{\\sigma})$\n",
+    "$\\left|{b}\\right\\rangle = \\frac{1}{2}(I + \\vec{b}\\vec{\\sigma})$\n",
     "\n",
-    "where $\\vec{\\sigma}$ is a vector of Pauli matrices $\\sigma_{x}$, $\\sigma_{y}$, $\\sigma_{z}$ and vectors $\\vec{a}$ and $\\vec{b}$ are parameter vectors of quantum states. Probabilities of measurement outcomes for a certain quantum state $\\ket{b}$ and fidelities of the outcome states with respect to the target state are $P_{+} = |\\braket{a}{+b}|^{2} = F_{+}$ and $P_{-} = |\\braket{a}{-b}|^{2} = F_{-}$. Then we can calculate the average fidelity of quantum clones by integrating over the surface of the Bloch sphere (because we pick the state $\\ket{+b}$ randomly):\n",
+    "where $\\vec{\\sigma}$ is a vector of Pauli matrices $\\sigma_{x}$, $\\sigma_{y}$, $\\sigma_{z}$ and vectors $\\vec{a}$ and $\\vec{b}$ are parameter vectors of quantum states. Probabilities of measurement outcomes for a certain quantum state $\\ket{b}$ and fidelities of the outcome states with respect to the target state are $P_{+} = |\\left\\langle{a}|{+b}\\right\\rangle|^{2} = F_{+}$ and $P_{-} = |\\left\\langle{a}|{-b}\\right\\rangle|^{2} = F_{-}$. Then we can calculate the average fidelity of quantum clones by integrating over the surface of the Bloch sphere (because we pick the state $\\left|{+b}\\right\\rangle$ randomly):\n",
     "\n",
     "$\\mathcal{F} = \\int_{S_{2}}d\\vec{b}(P_{+}F_{+} + P_{-}F_{-}) = \\frac{1}{2} + \\frac{1}{2}\\int_{S_{2}}d\\vec{b}(\\vec{a}*\\vec{b})^{2} = \\frac{2}{3} \\approx 0.667$\n",
     "\n",
