--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -470,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another trivial strategy for the quantum state cloning is a simple guess about the target state. Suppose we have a target state $\\ket{a}$. To do the cloning, we add one more arbitrary quantum state $\\ket{b}$ and call this couple of states clones. Let's calculate the fidelity of this cloning. If we choose a particular clone at random, we can equiprobably pick the unperturbed target state $\\ket{a}$ and obtain fidelity $F_{a} = 1$ or we can pick the arbitrary state $\\ket{b}$ wit fidelity $P_{b} = |\\braket{a}{+b}|^{2} = F_{b}$. The overall cloning fidelity will be\n",
+    "Another trivial strategy for the quantum state cloning is a simple guess about the target state. Suppose we have a target state $\\left|{a}\\right\\rangle$. To do the cloning, we add one more arbitrary quantum state $\\left|{b}\\right\\rangle$ and call this couple of states clones. Let's calculate the fidelity of this cloning. If we choose a particular clone at random, we can equiprobably pick the unperturbed target state $\\left|{a}\\right\\rangle$ and obtain fidelity $F_{a} = 1$ or we can pick the arbitrary state $\\left|{b}\\right\\rangle$ wit fidelity $P_{b} = |\\left\\langle{a}|{+b}\\right\\rangle|^{2} = F_{b}$. The overall cloning fidelity will be\n",
     "\n",
     "$\\mathcal{F} = \\frac{1}{2}F_{a} + \\frac{1}{2}\\int_{S_{2}}d\\vec{b}\\big{(}\\frac{1 + (\\vec{a}*\\vec{b})}{2}\\big{)} = \\frac{3}{4} = 0.75$\n",
     "\n",
@@ -575,21 +575,21 @@
    "source": [
     "This example of optimal cloning appeared in  <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.54.1844\"> the 1996 paper of Buzek and Hillery</a> and was the first demonstration of a vast family of cloning procedures. The UQC operator (or UQC machine) is a unitary transform of an input quantum qubit state, which is defined as follows: \n",
     "\n",
-    "$\\ket{0}\\ket{R}\\ket{M} \\longrightarrow \\sqrt\\frac{2}{3}\\ket{0}\\ket{0}\\ket{1} - \\sqrt\\frac{1}{3}\\ket{\\Psi^{+}}\\ket{0}$\n",
+    "$\\left|{0}\\right\\rangle\\left|{R}\\right\\rangle\\left|{M}\\right\\rangle \\longrightarrow \\sqrt\\frac{2}{3}\\left|{0}\\right\\rangle\\left|{0}\\right\\rangle\\left|{1}\\right\\rangle - \\sqrt\\frac{1}{3}\\left|{\\Psi^{+}}\\right\\rangle\\left|{0}\\right\\rangle$\n",
     "\n",
-    "$-\\ket{1}\\ket{R}\\ket{M} \\longrightarrow \\sqrt\\frac{2}{3}\\ket{1}\\ket{1}\\ket{0} - \\sqrt\\frac{1}{3}\\ket{\\Psi^{+}}\\ket{1}$\n",
+    "$-\\left|{1}\\right\\rangle\\left|{R}\\right\\rangle\\left|{M}\\right\\rangle \\longrightarrow \\sqrt\\frac{2}{3}\\left|{1}\\right\\rangle\\left|{1}\\right\\rangle\\left|{0}\\right\\rangle - \\sqrt\\frac{1}{3}\\left|{\\Psi^{+}}\\right\\rangle\\left|{1}\\right\\rangle$\n",
     "\n",
-    "where $\\ket{\\Psi^{+}} = \\frac{1}{\\sqrt 2}\\ket{1}\\ket{0} + \\frac{1}{\\sqrt 2}\\ket{0}\\ket{1}$, $ \\ket{R}$ is an arbitrary reference state from the same Hilbert space and $\\ket{M}$ is a state of the ancila qubit.\n",
+    "where $\\left|{\\Psi^{+}}\\right\\rangle = \\frac{1}{\\sqrt{2}}\\left|{1}\\right \\rangle\\left|{0}\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|{0}\\right\\rangle \\left|{1}\\right\\rangle$, $ \\left|{R}\\right\\rangle$ is an arbitrary reference state from the same Hilbert space and $\\left|{M}\\right\\rangle$ is a state of the ancila qubit.\n",
     "\n",
-    "By linearity, for an arbitrary qubit state $\\ket{\\psi} = \\alpha\\ket{0} + \\beta\\ket{1}$:\n",
+    "By linearity, for an arbitrary qubit state $\\left|{\\psi}\\right\\rangle = \\alpha\\left|{0}\\right\\rangle + \\beta\\left|{1}\\right\\rangle$:\n",
     "\n",
-    "$\\ket{\\psi}\\ket{R}\\ket{M} = \\sqrt\\frac{2}{3}\\ket{\\psi}\\ket{\\psi}\\ket{\\psi^{\\perp}} - \\sqrt\\frac{1}{6}\\big{(}\\ket{\\psi}\\ket{\\psi^{\\perp}} + \\ket{\\psi^{\\perp}}\\ket{\\psi}\\big{)}\\ket{\\psi}$\n",
+    "$\\left|{\\psi}\\right\\rangle\\left|{R}\\right\\rangle\\left|{M}\\right\\rangle = \\sqrt\\frac{2}{3}\\left|{\\psi}\\right\\rangle\\left|{\\psi}\\right\\rangle\\left|{\\psi^{\\perp}}\\right\\rangle - \\sqrt\\frac{1}{6}(\\left|{\\psi}\\right\\rangle\\left|{\\psi^{\\perp}}\\right\\rangle + \\left|{\\psi^{\\perp}}\\right\\rangle\\left|{\\psi}\\right\\rangle)\\left|{\\psi}\\right\\rangle$\n",
     "\n",
-    "where $\\ket{\\psi^{\\perp}} = \\alpha^{*}\\ket{0} - \\beta^{*}\\ket{1}$\n",
+    "where $\\left|{\\psi^{\\perp}}\\right\\rangle = \\alpha^{*}\\left|{0}\\right\\rangle - \\beta^{*}\\left|{1}\\right\\rangle$\n",
     "\n",
     "After applying the UQC machine to the target state, one obtains two clones as an output. These clones have mixed states with density matrices \n",
     "\n",
-    "$\\rho = \\frac{5}{6}\\ket{\\psi}\\bra{\\psi} + \\frac{1}{6}\\ket{\\psi^{\\perp}}\\bra{\\psi^{\\perp}}$\n",
+    "$\\rho = \\frac{5}{6}\\left|{\\psi}\\right\\rangle\\left\\langle{\\psi}\\right| + \\frac{1}{6}\\left|{\\psi^{\\perp}}\\right\\rangle\\left\\langle{\\psi^{\\perp}}\\right|$\n",
     "\n",
     "It is clear that the fidelity between the initial state and the resulting clone state is \n",
     "\n",
