--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -472,7 +472,7 @@
    "source": [
     "Another trivial strategy for the quantum state cloning is a simple guess about the target state. Suppose we have a target state $\\left|{a}\\right\\rangle$. To do the cloning, we add one more arbitrary quantum state $\\left|{b}\\right\\rangle$ and call this couple of states clones. Let's calculate the fidelity of this cloning. If we choose a particular clone at random, we can equiprobably pick the unperturbed target state $\\left|{a}\\right\\rangle$ and obtain fidelity $F_{a} = 1$ or we can pick the arbitrary state $\\left|{b}\\right\\rangle$ wit fidelity $P_{b} = |\\left\\langle{a}|{+b}\\right\\rangle|^{2} = F_{b}$. The overall cloning fidelity will be\n",
     "\n",
-    "$\\mathcal{F} = \\frac{1}{2}F_{a} + \\frac{1}{2}\\int_{S_{2}}d\\vec{b}\\big{(}\\frac{1 + (\\vec{a}*\\vec{b})}{2}\\big{)} = \\frac{3}{4} = 0.75$\n",
+    "$\\mathcal{F} = \\frac{1}{2}F_{a} + \\frac{1}{2}\\int_{S_{2}}d\\vec{b}(\\frac{1 + (\\vec{a}*\\vec{b})}{2}) = \\frac{3}{4} = 0.75$\n",
     "\n",
     "We can model this cloning using a quantum circuit presented above."
    ]
@@ -801,19 +801,19 @@
     "\n",
     "What we are going to look at next is an example of a quantum cloning that can copy quantum states from a particular plane of the Bloch sphere. This cloning machine is called **phase covariant**, because it is independent of a rotation angle, which parametrizes states inside this plane. If  it is XY plane, states have the form\n",
     "\n",
-    "$\\ket{\\psi(\\phi}> = \\frac{1}{\\sqrt 2}\\big{(}\\ket{0} + e^{i\\phi}\\ket{1}\\big{)}$\n",
+    "$\\left|{\\psi(\\phi}\\right\\rangle = \\frac{1}{\\sqrt{2}}(\\left|{0}\\right\\rangle + e^{i\\phi}\\left|{1}\\right\\rangle)$\n",
     "\n",
     "where $\\phi$ is a quantum phase. This was an original proposal of such a cloner in the work of <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.62.012302\">Bruss et al. (2000)</a> and the reason it is called phase-covariant. The action of the cloner unitary on qubit basis states:\n",
     "\n",
-    "$\\ket{0}\\ket{0} \\longrightarrow \\ket{0}\\ket{0}$\n",
+    "$\\left|{0}\\right\\rangle\\left|{0}\\right\\rangle \\longrightarrow \\left|{0}\\right\\rangle\\left|{0}\\right\\rangle$\n",
     "\n",
-    "$\\ket{1}\\ket{0} \\longrightarrow \\cos\\eta\\ket{1}\\ket{0} + \\sin\\eta\\ket{0}\\ket{1}$\n",
+    "$\\left|{1}\\right\\rangle\\left|{0}\\right\\rangle \\longrightarrow \\cos\\eta\\left|{1}\\right\\rangle\\left|{0}\\right\\rangle + \\sin\\eta\\left|{0}\\right\\rangle\\left|{1}\\right\\rangle$\n",
     "\n",
     "with $\\eta \\in [0, 2\\pi]$.\n",
     "\n",
     "By linearity, for an arbitrary qubit state $\\psi(\\phi)$:\n",
     "\n",
-    "$\\ket{\\psi(\\phi)}\\ket{0} \\longrightarrow \\frac{1}{2}\\big{(}\\ket{0}\\ket{0} + \\cos\\eta e^{i\\phi}\\ket{1}\\ket{0} + \\sin\\eta e^{i\\phi}\\ket{0}\\ket{1}\\big{)}$\n",
+    "$\\left|{\\psi(\\phi)}\\right\\rangle\\left|{0}\\right\\rangle \\longrightarrow \\frac{1}{2}(\\left|{0}\\right\\rangle\\left|{0}\\right\\rangle + \\cos\\eta e^{i\\phi}\\left|{1}\\right\\rangle\\left|{0}\\right\\rangle + \\sin\\eta e^{i\\phi}\\left|{0}\\right\\rangle\\left|{1}\\right\\rangle)$\n",
     "\n",
     "The fidelity of two resulting clones are:\n",
     "\n",
@@ -821,7 +821,7 @@
     "\n",
     "$F_{B} = \\frac{1}{2}(1 + \\sin\\eta)$\n",
     "\n",
-    "For the optimal simmetric cloning one requires $F_{A}$ = $F_{B}$, immideately obtaining $\\eta = \\pi/4$ and $F_{A}$ = $F_{B}$ = $\\frac{1}{2}\\big{(}1 + \\frac{1}{\\sqrt 2}\\big{)} \\approx 0.8535$\n",
+    "For the optimal simmetric cloning one requires $F_{A}$ = $F_{B}$, immideately obtaining $\\eta = \\pi/4$ and $F_{A}$ = $F_{B}$ = $\\frac{1}{2}(1 + \\frac{1}{\\sqrt{2}}) \\approx 0.8535$\n",
     "\n",
     "Let's implement this quantum cloning machine using qiskit. It was demonstrated in a work by <a href=\"https://journals.aps.org/pra/abstract/10.1103/PhysRevA.65.012304\">Fan et al.(2001)</a> that the quantum circuit from above is capable of implementing phase-covariant quantum cloning in both XY and XZ planes of the Bloch sphere using different rotation parameters."
    ]
@@ -940,7 +940,7 @@
     "\n",
     "To see this on a particular example, let's look at the first and the most known QKD protocol - BB84 by Bennet and Brassard. The first steps we are interested in are the following:\n",
     "\n",
-    "1. Alice chooses randomly (50/50) one of the two basis sets: {$\\ket{+}$, $\\ket{-}$} or {$\\ket{i+}$, $\\ket{i-}$}; then Alice chooses randomly (50/50) a quantum bit, encoded as a state from one of the basis sets (e.g., $\\ket{+}$ state); finally, Alice sends this state into the quantum channel.\n",
+    "1. Alice chooses randomly (50/50) one of the two basis sets: {$\\left|{+}\\right\\rangle$, $\\left|{-}\\right\\rangle$} or {$\\left|{i+}\\right\\rangle$, $\\left|{i-}\\right\\rangle$}; then Alice chooses randomly (50/50) a quantum bit, encoded as a state from one of the basis sets (e.g., $\\left|{+}\\right\\rangle$ state); finally, Alice sends this state into the quantum channel.\n",
     "\n",
     "2. Eve attacks the quantum channel, trying to get information about the unknown quantum state, sent by Alice. She can measure this state and resend the result (**the intercept-resend attack**), or she can use an ancillary quantum system to unitary evolve with the target state without doing a measurement of the latter (**the unitary attack**). \n",
     "\n",
