--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -989,7 +989,7 @@
     "[0] W. K. Wootters and W. H. Zurek, *A single quantum cannot be cloned*, \n",
     "<a href=\"https://www.nature.com/articles/299802a0\">Nature 299, 802–803 (1982)</a>\n",
     "\n",
-    "Check these concise reviews and dive into the vast ocean of quantum cloning machines and their applications!\n",
+    "Check these comprehensive reviews and dive into the vast ocean of quantum cloning machines and their applications!\n",
     "\n",
     "[1] V. Scarani, S. Iblisdir, N. Gisin and A. Acin, *Quantum cloning*,\n",
     "<a href=\"https://journals.aps.org/rmp/abstract/10.1103/RevModPhys.77.1225\">Rev. Mod. Phys. 77, 1225</a>\n",
