--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -17,26 +17,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Table of contents**\n",
+    "## **Table of contents:**\n",
     "\n",
-    "**<a href='#section1'>The \"No cloning theorem\" in quantum mechanics</a>**\n",
+    "### **The \"No cloning theorem\" in quantum mechanics**\n",
     "\n",
-    "**<a href='#section2'>Trivial ways of cloning: gaining intuition</a>**\n",
+    "### **Trivial ways of cloning: gaining intuition**\n",
     "\n",
-    "**<a href='#section3'>Clever ways of cloning: getting a pair of pretty good clones</a>**\n",
+    "### **Clever ways of cloning: getting a pair of pretty good clones**\n",
     "\n",
-    "**<a href='#section4'>Why is this interesting?</a>**\n",
+    "### **Why is this interesting?**\n",
     "\n",
-    "**<a href='#section5'>References</a>**"
+    "### **References**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section1'></a>\n",
-    "## **The \"No-cloning theorem\" in quantum mechanics** \n",
-    "<a href='#top'>(to the top)</a>"
+    "## **The \"No-cloning theorem\" in quantum mechanics**"
    ]
   },
   {
@@ -350,9 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='section2'></a>\n",
-    "## **Trivial ways of cloning: gaining intuition**\n",
-    "<a href='#top'>(to the top)</a>"
+    "## **Trivial ways of cloning: gaining intuition**"
    ]
   },
   {
