--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -291,7 +291,7 @@
     "\n",
     "$Pr(11) = \\left\\langle 11|\\Psi_{final}\\right\\rangle = \\frac{1}{4}$\n",
     "\n",
-    "Looking back at the resulting histogram, we see slightly different results: there are no \"01\" and \"10\" pairs at all! If we go through the whole procedure of the last experiment step-by-step, we can easily see where the cloning has failed:\n",
+    "Looking back at the resulting histogram, we see quite different results: there are no \"01\" and \"10\" pairs at all! If we go through the whole procedure of the last experiment step-by-step, we can easily see where the cloning has failed:\n",
     "\n",
     "$\\left|0\\right\\rangle\\left|0\\right\\rangle \\longrightarrow [\\text{apply hadamard to qubit 1}] \\longrightarrow \\frac{1}{\\sqrt{2}}(\\left|0\\right\\rangle + \\left|1\\right\\rangle)\\otimes\\left|0\\right\\rangle \\longrightarrow [\\text{apply CNOT(12) }] \\longrightarrow \\frac{1}{\\sqrt{2}}\\left|0\\right\\rangle\\left|0\\right\\rangle + \\frac{1}{\\sqrt{2}}\\left|1\\right\\rangle\\left|1\\right\\rangle$\n",
     "\n",
