--- a/TMQ_Optimal_quantum_cloning.ipynb
+++ b/TMQ_Optimal_quantum_cloning.ipynb
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus we can see that the **perfect** cloning of an arbitrary unknown quantum state is impossible! Trying to copy states other than from an orthogonal set leads to entanglement between the target and the ancillary systems. As a consequence, it would be impossible to address pure quantum states to our systems alone and thus have them in the target state.\n",
+    "Thus we can see that the **perfect cloning of an arbitrary unknown quantum state is impossible**. Trying to copy states other than from an orthogonal set leads to entanglement between the target and the ancillary systems. As a consequence, it would be impossible to address pure quantum states to our systems alone and thus have them in the target state.\n",
     "\n",
     "The no-cloning theorem provides a basic property of quantum mechanics and has an important impact on applications. To name a few, it serves as a solid ground for quantum cryptography, where the impossibility of cloning signal states prohibits invisible eavesdropping for an adversary. It also limits quantum error correction techniques, which are necessary for universal quantum computing. This theorem also has a connection to fundamental questions of quantum mechanics, e.g., the no-signaling requirement of quantum theory and our capability to obtain information from quantum states.\n",
     "\n",
